<?xml version="1.0"?>
<package format="2">
  <name>autoware_msgs</name>
  <version>0.0.0</version>
  <description>The autoware_msgs package</description>
  <maintainer email="wily@todo.todo">wily</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
